@@ -1,5 +1,10 @@
 2007-05-17  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-logout.c: (panel_logout_timeout): add username of the current
+	user to the logout dialog
+
+2007-05-17  Vincent Untz  <vuntz@gnome.org>
+
 	* panel-recent.c: (recent_documents_clear_cb): fix compilation
 
 2007-05-16  Vincent Untz  <vuntz@gnome.org>
